[NAE-2417] Fix dependency vulnerabilities
- Simplified date parsing logic with helper methods in `FieldFactory`.
- Introduced constants for repeated strings in `DefaultFiltersRunner` and `DataService`.
- Replaced deprecated Collectors API in `PetriNetService` with `toList()`.
- Optimized XML file path handling in `FilterImportExportService` using `Path.of`.
- Removed unused imports from `FilterDeserializer`.